Added Cred to the NuGet.Config

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NuGet.Config
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NuGet.Config
@@ -6,4 +6,10 @@
 
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
+  <packageSourceCredentials>
+    <tei>
+      <add key="Username" value="lawenforcement"/>
+      <add key="ClearTextPassword" value="lawenforcement"/>
+    </tei>
+  </packageSourceCredentials>
 </configuration>
