--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -59,8 +59,6 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
-    <Reference Include="System.Runtime.Serialization.Primitives, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-    </Reference>
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -199,7 +197,7 @@
       <Version>2.10.2</Version>
     </PackageReference>
     <PackageReference Include="MongoDB.Driver.Core">
-      <Version>2.7.0</Version>
+      <Version>2.10.2</Version>
     </PackageReference>
     <PackageReference Include="MongoDB.Libmongocrypt">
       <Version>1.0.0</Version>
@@ -209,6 +207,9 @@
     </PackageReference>
     <PackageReference Include="NibrsModels">
       <Version>1.1.3</Version>
+    </PackageReference>
+    <PackageReference Include="System.ServiceModel.Primitives">
+      <Version>4.5.3</Version>
     </PackageReference>
     <PackageReference Include="Util">
       <Version>1.0.7</Version>
