--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -83,6 +83,7 @@
     <Compile Include="DirectoryInfo.cs" />
     <Compile Include="Exceptions\DeleteRequestAbortException.cs" />
     <Compile Include="Exceptions\DocumentsFailedToSaveInDBException.cs" />
+    <Compile Include="Extension.cs" />
     <Compile Include="LogManager.cs" />
     <Compile Include="NibrsError\Error.cs" />
     <Compile Include="NibrsXmlTransaction.cs" />
@@ -95,7 +96,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Constants\Ucr\UcrReportTypes.cs" />
     <Compile Include="Processor\NibrsReportingProcessor.cs" />
-    <Compile Include="BatchResponseReport.cs" />
     <Compile Include="SubmissionWriter.cs" />
     <Compile Include="Ucr\DataCollections\Arson.cs" />
     <Compile Include="Ucr\DataCollections\GeneralSummaryCounts.cs" />
