Added extra boolean to give more context of Nibrs reporting.

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Processor\AgencyDeleteProcessor.cs" />
     <Compile Include="Processor\AgencyInsertOrReplaceProcessor.cs" />
     <Compile Include="Processor\BaseProcessor.cs" />
+    <Compile Include="Processor\BatchResponseReport.cs" />
     <Compile Include="Processor\SubmissionBatchStatus.cs" />
     <Compile Include="Processor\Translator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
