--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -209,7 +209,7 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
     </PackageReference>
-    <PackageReference Include="NibrsModels">
+    <PackageReference Include="NibrsDataModels">
       <Version>1.3.13</Version>
     </PackageReference>
     <PackageReference Include="System.ServiceModel.Primitives">
